--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 #page-logo{
-	width: 350px;
+	/*width: 350px;*/
 	margin-left: 20px;
 	display: inline-block;
 }
@@ -12,11 +12,7 @@
 }
 
 #page-logo #link-to-home{
-	border: 4px solid white;
-	border-radius: 20px;
 	padding: 20px;
-	background: rgb(102, 119, 164);
-	width: 350px;
 }
 
 .box{
@@ -36,20 +32,22 @@
 }
 
 body {
-	background: #F0F3F1;
+	background: #FFF2E7;
 	font-family: Arial;
 	font-size: 12px;
 	line-height: 20px;
+	color: #4b4d52;
 }
 
 /*HEADER*/
 
 header {
-	background: #FFD6FF;
+	background: #FFF8F3;
 	width: 100%;
 	margin: 0vh 0vh;
 	padding:2vh 0vh 0vh 0vh;
 	height: 150px;
+	color: #4b4d52;
 }
 
 
@@ -81,7 +79,7 @@ nav ul li {
 }
 
 nav a {
-	color: white;
+	color: #DE8642;
 	font-size: 15px;
 	text-decoration: none;
 	padding: 14px 15px 10px 15px;
@@ -115,14 +113,14 @@ hr {
 
 
 .leftContent {
-	/*background: #cccccc;*/
-	background: #FFD6FF;
+	/*background: #cccccc;
+	background: #FFD6FF;*/
 	float: left;
 	width: 73%;
-	height: 60vh;
+	/*height: 60vh;*/
 	padding: 2%;
 	margin-right: 1%;
-	margin-top: 5%;
+	margin-top: 3%;
 	overflow-y: auto;
 	font-size: 12pt;
 }
