--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ header {
 }
 
 #logo{
-	width: 110px;
+	width: 90px;
 	padding-bottom:10px;
 }
 header input {
@@ -95,9 +95,11 @@ nav a:visited {
 	background: none;
 }
 
-/*a#home-nav, a#contact-nav {
-	background: rgb(190, 190, 190);;
-}*/
+.content{
+	max-width: 1000px;
+	margin-left: auto;
+	margin-right:auto;
+}
 
 /*MAIN*/
 
@@ -111,15 +113,10 @@ hr {
 
 
 .leftContent {
-	/*background: #cccccc;
-	background: #FFD6FF;*/
 	float: left;
-	width: 73%;
-	/*height: 60vh;*/
+	width: 70%;
 	padding: 2%;
-	margin-right: 1%;
-	margin-top: 3%;
-	overflow-y: auto;
+	/*overflow-y: auto;*/
 	font-size: 12pt;
 }
 
@@ -175,21 +172,25 @@ hr {
 }
 
 .rightContent {
-	/*background: #cccccc;*/
-	background: #FFD6FF;
+	/*background: #cccccc;
+	background: #eae7e2;*/
 	float: right;
-	width: 18%;
-	height: 60vh;
+	width: 30%;
+	height: 100%;
 	padding: 2%;
 	overflow-y: auto;
-	text-align: center
+	text-align: left;
+	color: #4b4d52;
 }
 
-.rightContent ul {
+.rightContent ul li {
 	padding-left: 20px;
-
+	color: #4b4d52;
+	text-align: left;
 }
-
+.rightContent a {
+	color: #4b4d52;
+}
 .rightContent .user-list{
 	width: 110px;
 	margin-left:auto;
@@ -226,13 +227,9 @@ hr {
 
 footer {
 	clear: both;
-	color: white;
-	height: 10vh;
+	color: #16062b;
 	background: #FFD6FF;
-}
-
-footer p {
-	padding: 20px;	
+	padding-left: 30px;	
 }
 
 form {
