--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,15 @@
   padding: 0px;
 }
 
+html, body {
+	height:100%;
+}
+
+#wrap { /*ro adjust footer*/
+	min-height:100%;
+	position:relative;
+}
+
 #page-logo{
 	/*width: 350px;*/
 	margin-left: 20px;
@@ -97,8 +106,10 @@ nav a:visited {
 
 .content{
 	max-width: 1000px;
+	min-height:400px;
 	margin-left: auto;
 	margin-right:auto;
+	padding-bottom:80px; /*for footer*/
 }
 
 /*MAIN*/
@@ -227,9 +238,22 @@ hr {
 
 footer {
 	clear: both;
-	color: #16062b;
-	background: #FFD6FF;
+	color: #FFF2E7;
+	font-size: 12px;
+	background: #32313f;
 	padding-left: 30px;	
+	margin-bottom: -10px;
+	
+	width:100%;
+	height:80px;
+	position:absolute;
+	bottom:0;
+
+}
+
+footer p{
+	padding-top:10px;
+	margin-bottom: -5px;
 }
 
 form {
