--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,11 @@ header {
 	color: #4b4d52;
 }
 
+@font-face {
+   font-family: title;
+   src: url(KaushanScript-Regular.otf);
+}
+
 #logo{
 	width: 90px;
 	padding-bottom:10px;
@@ -63,6 +68,11 @@ header h2, header h4{
 	text-align: center;
 }
 
+header h2{
+	font-family: title;
+	font-size: 40px;
+	color: #ff9933;
+}
 
 nav {
 	float: right;
