--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,8 +70,9 @@ header h2, header h4{
 
 header h2{
 	font-family: title;
-	font-size: 40px;
+	font-size: 45px;
 	color: #ff9933;
+	padding-left:20px;
 }
 
 nav {
@@ -96,14 +97,15 @@ nav ul li {
 }
 
 nav a {
-	color: #DE8642;
+	color: #ff9933;
 	font-size: 15px;
 	text-decoration: none;
 	padding: 14px 15px 10px 15px;
 }
 
 nav a:hover {
-	background: rgb(102, 119, 164);
+	background: #ff99ff;
+	color: #000033;
 }
 
 nav a:active {
