--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -346,7 +346,7 @@ div.wrap-textarea textarea {
 }
 
 div.wrap-textarea input[type=submit], input[type=button] {
-	background: white;
+	/*background: white;*/
 	border:0 none;
     border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -357,6 +357,12 @@ div.wrap-textarea input[type=submit], input[type=button] {
 	outline: none;
 	float: left;
 }
+input[type=file]{
+	/*background: white;*/
+	padding:5px 15px; 
+	font-size: 12px;
+}
+
 
 div.wrap-textarea input[type=submit]:hover, input[type=button]:hover {
 /*	background: red;*/
