--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,6 +208,9 @@ hr {
 
 .rightContent table {
     max-width: 100%;
+	max-height: 300px;
+  display: block;
+  overflow-y: scroll;
 }
 
 .rightContent h3{
@@ -221,7 +224,9 @@ hr {
 
 .thumbnail{
 	width: 50px;
+	height: 50px;
 	padding:0px;
+	margin-bottom: 0px;
 }
 
 .rightContent .online{
